--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
 beautifulsoup4 @ file:///C:/b/abs_3fjnplvbrh/croot/beautifulsoup4-split_1752599001105/work
 billiard==4.2.1
 bleach @ file:///C:/b/abs_925i9psm3u/croot/bleach_1732292896852/work
+Bottleneck @ file:///C:/b/abs_816hr2khp1/croot/bottleneck_1731058648110/work
+Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
 brotlicffi @ file:///C:/b/abs_f4lixvzmxt/croot/brotlicffi_1736183286104/work
 celery==5.5.3
 certifi==2025.7.9
@@ -31,13 +33,14 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+cloudpickle==3.1.1
 colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
 comm @ file:///C:/b/abs_67a8058udb/croot/comm_1709322909844/work
 configobj==5.0.9
-contourpy==1.3.0
+contourpy @ file:///C:/b/abs_b0lpi9pj9c/croot/contourpy_1738161183484/work
 cryptography==45.0.5
 curl_cffi==0.12.0
-cycler==0.12.1
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
 debugpy @ file:///C:/b/abs_bf9oo2vhxp/croot/debugpy_1736269476451/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
@@ -78,7 +81,7 @@ httpx @ file:///C:/b/abs_9fclaf1b46/croot/httpx_1746747856672/work
 hydra-core==1.3.2
 idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
 importlib_metadata @ file:///C:/b/abs_9d0lp1ysmt/croot/importlib_metadata-suite_1732633510972/work
-importlib_resources==6.5.2
+importlib_resources @ file:///C:/b/abs_e9f8_0_2dq/croot/importlib_resources-suite_1720641112288/work
 ipykernel @ file:///C:/b/abs_6c9ggygp01/croot/ipykernel_1737660720620/work
 ipython @ file:///C:/b/abs_e5729i179y/croot/ipython_1694181400005/work
 iterative-telemetry==0.0.10
@@ -98,14 +101,18 @@ jupyterlab @ file:///C:/b/abs_79ucqim8vh/croot/jupyterlab_1752046383161/work
 jupyterlab_pygments @ file:///C:/b/abs_d5alfet8m6/croot/jupyterlab_pygments_1741124274578/work
 jupyterlab_server @ file:///C:/b/abs_fdi5r_tpjc/croot/jupyterlab_server_1725865372811/work
 keras==3.8.0
-kiwisolver==1.4.7
+kiwisolver @ file:///C:/b/abs_88mdhvtahm/croot/kiwisolver_1672387921783/work
 kombu==5.5.4
+llvmlite==0.43.0
 markdown-it-py==3.0.0
 MarkupSafe @ file:///C:/b/abs_a0ma7ge0jc/croot/markupsafe_1738584052792/work
-matplotlib==3.9.4
+matplotlib==3.9.2
 matplotlib-inline @ file:///C:/ci/matplotlib-inline_1661915841596/work
 mdurl==0.1.2
 mistune @ file:///C:/b/abs_77yql3poyz/croot/mistune_1741124004410/work
+mkl-service==2.4.0
+mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
+mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
 ml_dtypes==0.5.1
 multidict==6.6.3
 multitasking==0.0.11
@@ -118,8 +125,9 @@ nest-asyncio @ file:///C:/b/abs_65d6lblmoi/croot/nest-asyncio_1708532721305/work
 networkx==3.2.1
 notebook @ file:///C:/b/abs_2etl6y89ui/croot/notebook_1752060897959/work
 notebook_shim @ file:///C:/b/abs_9ctyfgpncn/croot/notebook-shim_1741707829491/work
+numba==0.60.0
 numexpr==2.10.2
-numpy==2.0.2
+numpy @ file:///C:/b/abs_0123vcxhf8/croot/numpy_and_numpy_base_1725470331966/work/dist/numpy-2.0.1-cp39-cp39-win_amd64.whl#sha256=afd4c53d4b548db7b600782fd4368ad419de0533ac199a031101a0b99df7eaf7
 omegaconf==2.3.0
 openpyxl==3.1.5
 optree==0.14.1
@@ -133,7 +141,7 @@ parso @ file:///C:/b/abs_834b4mj92b/croot/parso_1733963322289/work
 pathspec==0.12.1
 peewee==3.18.2
 pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-pillow==11.3.0
+pillow @ file:///C:/b/abs_b50vowcrzo/croot/pillow_1738010273782/work
 platformdirs @ file:///C:/b/abs_ddh15014or/croot/platformdirs_1744273060660/work
 plotly==6.0.1
 prometheus_client @ file:///C:/b/abs_8b175q_ub8/croot/prometheus_client_1744271638821/work
@@ -150,7 +158,7 @@ Pygments==2.19.1
 pygtrie==2.5.0
 pyinstaller==6.12.0
 pyinstaller-hooks-contrib==2025.2
-pyparsing==3.2.3
+pyparsing @ file:///C:/b/abs_40z8gyj9wi/croot/pyparsing_1731445739241/work
 PySide6==6.9.0
 PySide6_Addons==6.9.0
 PySide6_Essentials==6.9.0
@@ -173,16 +181,20 @@ rich==13.9.4
 rpds-py @ file:///C:/b/abs_0c6z5kcdb6/croot/rpds-py_1736545465023/work
 ruamel.yaml==0.18.14
 ruamel.yaml.clib==0.2.12
+scikit-learn==1.6.1
+scipy @ file:///C:/Users/dev-admin/cr_scipy-feedstock/scipy_1733774324044/work/dist/scipy-1.13.1-cp39-cp39-win_amd64.whl#sha256=f7218697f964ae4372cdcb6f20a05db0d338ccc574c96e9dbf235ed6547dd462
 scmrepo==3.3.11
 seaborn==0.13.2
 selenium==4.30.0
 semver==3.0.4
 Send2Trash @ file:///C:/b/abs_7e73ol18dl/croot/send2trash_1736542724140/work
+shap==0.48.0
 shellingham==1.5.4
 shiboken6==6.9.0
 shortuuid==1.0.13
 shtab==1.7.2
 six==1.17.0
+slicer==0.0.8
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve @ file:///C:/b/abs_bbsvy9t4pl/croot/soupsieve_1696347611357/work
@@ -204,6 +216,7 @@ typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.12.2
 tzdata==2025.2
+unicodedata2 @ file:///C:/b/abs_dfnftvxi4k/croot/unicodedata2_1736543771112/work
 urllib3 @ file:///C:/b/abs_393g1ayee_/croot/urllib3_1750775481226/work
 vine==5.1.0
 voluptuous==0.15.2
@@ -214,6 +227,7 @@ websocket-client==1.8.0
 websockets==15.0.1
 win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
 wsproto==1.2.0
+xgboost==2.1.4
 XlsxWriter==3.2.2
 yarl==1.20.1
 zc.lockfile==3.0.post1
